--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 before_install:
   - sudo pip install cpp-coveralls
 install:
-  - tests/test-deps.sh
+  - tests/files/travis/test-deps.sh
 script:
   - qmake -config gcov
   - make
