adds VCS_COMMIT_ID to include this information in the QAmqpClient to send it to the AMQP peer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,8 @@ file(GLOB SRC *.cpp)
 
 source_group("${LIB_NAME} Sources" ${HDR} ${SRC})
 
+_add_vcs_info_to_file(qamqpclient.cpp)
+
 set(LNK Qt5::Core Qt5::Network)
 
 add_library(${LIB_NAME} OBJECT ${API} ${SRC})
