adds existing tests to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ get_filename_component(QAMQP_PATH "${CMAKE_CURRENT_SOURCE_DIR}" ABSOLUTE)
 include(${QAMQP_PATH}/cmake/CMakeSettings.cmake)
 
 add_subdirectory(src)
+add_subdirectory(tests/auto)
