adds gcov/lcov execution helper

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,3 +11,7 @@ set(LNK Qt5::Core Qt5::Network)
 
 add_library(${LIB_NAME} OBJECT ${API} ${SRC})
 target_link_libraries(${LIB_NAME} ${LNK})
+
+add_library(${LIB_NAME}-coverage OBJECT ${API} ${SRC})
+target_link_libraries(${LIB_NAME}-coverage ${LNK})
+_enable_compiler_coverage_flags_for(${LIB_NAME}-coverage)
